--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -51,7 +51,7 @@
           "PARTICIPANT_NAME_REQUIRED": "You must specify a name for each participant",
           "PARTICIPANT_SHARE_REQUIRED": "You must specify the share of each participant",
           "INVALID_SHARE": "The share of each participant must be greater than 0",
-          "CREATE_EVENT_DEFAULT_ERROR": "Sorry, there was a problem creating the event"
+          "DEFAULT": "Sorry, an error occurred while creating the event"
         }
       }
     },
@@ -94,7 +94,7 @@
           "EXPENSE_LABEL_REQUIRED": "You must specify a label for the expense",
           "EXPENSE_AMOUNT_REQUIRED": "You must specify the amount of the expense",
           "INVALID_AMOUNT": "The specified amount must be greater than 0",
-          "ADD_EXPENSE_DEFAULT_ERROR": "Sorry, the expense could not be added"
+          "DEFAULT": "Sorry, an error occurred while creating the expense"
         }
       },
       "modal": {
@@ -127,7 +127,7 @@
             "PARTICIPANT_NAME_REQUIRED": "You must specify the name of the participant",
             "PARTICIPANT_SHARE_REQUIRED": "You must specify the share of the participant",
             "INVALID_SHARE": "The share of the participant must be greater than 0",
-            "ADD_PARTICIPANT_DEFAULT_ERROR": "Sorry, the participant could not be added"
+            "DEFAULT": "Sorry, an error occurred while adding the participant"
           }
         }
       }
@@ -147,7 +147,7 @@
         "cancel": "Cancel",
         "errors": {
           "INVALID_EMAIL": "The email must be a valid",
-          "EDIT_PARTICIPANT_DEFAULT_ERROR": "Sorry, the participant could not be updated"
+          "DEFAULT": "Sorry, an error occurred while updating the participant"
         }
       }
     },
