--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -51,7 +51,7 @@
           "PARTICIPANT_NAME_REQUIRED": "Vous devez spécifier un nom pour chaque participant",
           "PARTICIPANT_SHARE_REQUIRED": "Vous devez spécifier la part pour chaque participant",
           "INVALID_SHARE": "La part de chaque participant doit être supérieure à 0",
-          "CREATE_EVENT_DEFAULT_ERROR": "Désolé, un problème est survenu lors de la création de l'événement"
+          "DEFAULT": "Désolé, une erreur s'est produite lors de la création de l'événement"
         }
       }
     },
@@ -94,7 +94,7 @@
           "EXPENSE_LABEL_REQUIRED": "Vous devez spécifier un label pour la dépense",
           "EXPENSE_AMOUNT_REQUIRED": "Vous devez spécifier la somme de la dépense",
           "INVALID_AMOUNT": "Le somme spécifiée doit être supérieure à 0",
-          "ADD_EXPENSE_DEFAULT_ERROR": "Désolé, la dépense n'a pas pu être ajoutée"
+          "DEFAULT": "Désolé, une erreur s'est produite lors de l'ajout de la dépense"
         }
       },
       "modal": {
@@ -128,7 +128,7 @@
             "PARTICIPANT_NAME_REQUIRED": "Vous devez spécifier le nom du participant.",
             "PARTICIPANT_SHARE_REQUIRED": "Vous devez spécifier la part du participant.",
             "INVALID_SHARE": "La part du participant doit être supérieure à 0.",
-            "ADD_PARTICIPANT_DEFAULT_ERROR": "Désolé, le participant n'a pas pu être ajouté"
+            "DEFAULT": "Désolé, une erreur s'est produite lors de l'ajout du participant"
           }
         }
       }
@@ -148,7 +148,7 @@
         "cancel": "Annuler",
         "errors": {
           "INVALID_EMAIL": "L'email doit être valide",
-          "EDIT_PARTICIPANT_DEFAULT_ERROR": "Désolé, le participant n'a pas pu être mis à jour"
+          "DEFAULT": "Désolé, une erreur s'est produite lors de la mise à jour du participant"
         }
       }
     },
