--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -2,14 +2,10 @@
   "locale": "Français",
   "app": {
     "angularLocale": "français",
-    "global": {
-      "title": "Un bon ami paye toujours ses dettes - Répartissez les dépenses d'un événement entre ses participants",
-      "description": "Créez un événement avec des participants, ajoutez des dépenses et répartissez-les entre les participants sélectionnés. Obtenez ensuite un récapitulatif des sommes dûes par chacun.",
-      "footer": {
-        "made_by": "Créé par",
-        "twitter_account": "Compte twitter"
-      }
-    },
+    "title": "Un bon ami paye toujours ses dettes - Répartissez les dépenses d'un événement entre ses participants",
+    "description": "Créez un événement avec des participants, ajoutez des dépenses et répartissez-les entre les participants sélectionnés. Obtenez ensuite un récapitulatif des sommes dûes par chacun.",
+    "made_by": "Créé par",
+    "twitter_account": "Compte twitter",
     "notification": {
       "EXPENSE_ADDED_SUCCESS": {
         "title": "Ajout effectué !",
@@ -31,17 +27,17 @@
     "home": {
       "title": "Un bon ami paye toujours ses dettes",
       "pitch": "Répartissez les dépenses d'un événement entre ses participants.",
-      "tyrion": "Tyrion Lannister approuve.",
-      "event_form": {
+      "jk": "Approuvé par les Lannisters.",
+      "create": {
         "title": "Créez votre événement",
-        "event_name": "Nom de l'événement",
-        "event_name_ph": "Weekend à la plage",
+        "e_name": "Nom de l'événement",
+        "e_name_ph": "Weekend à la plage",
         "participants": "Participants",
-        "participant_name": "Nom",
-        "participant_email": "Email (optionnel)",
-        "participant_share": "Part",
-        "add_participant": "Ajouter un participant",
-        "remove_participant": "Supprimer ce participant",
+        "p_name": "Nom",
+        "p_email": "Email (optionnel)",
+        "p_share": "Part",
+        "add_p": "Ajouter un participant",
+        "remove_p": "Supprimer ce participant",
         "create": "Créer l'événement",
         "loading": "Création de l'événement...",
         "email_help": "Les emails sont utilisés uniquement pour envoyer des rappels.",
@@ -57,20 +53,18 @@
     },
     "event": {
       "with": "Avec",
-      "purchased_by": "Achat effectué par",
-      "shared_between": "Dépense partagée entre",
-      "actions": "Actions",
-      "delete": "Supprimer",
-      "load_more": "Voir plus de dépenses",
       "tabs": {
         "expenses": "Dépenses",
         "participants": "Participants",
         "results": "Résultats"
       },
-      "actions": {
-        "add_participant": "Ajouter un participant"
-      },
-      "expense_form": {
+      "add_p": "Ajouter un participant"
+    },
+    "expenses": {
+      "by": "Achat effectué par",
+      "shared": "Dépense partagée entre",
+      "load_more": "Voir plus de dépenses",
+      "create": {
         "title": "Nouvelle dépense",
         "label": "Label",
         "label_ph": "Courses pour le barbecue",
@@ -78,14 +72,12 @@
         "purchaser_ph": "Choisir...",
         "amount": "Somme dépensée",
         "amount_ph": "9,11",
-        "amount_precision": ",00",
-        "share_with": {
-          "label": "Partager entre",
-          "all": "Tous",
-          "none": "Aucun",
-          "selected": "sélectionnés",
-          "ph": "Choisir parmi les participants..."
-        },
+        "precision": ",00",
+        "share": "Partager entre",
+        "all": "Tous",
+        "none": "Aucun",
+        "selected": "sélectionnés",
+        "share_ph": "Choisir parmi les participants...",
         "description_ph": "Pour d'éventuelles précisions",
         "submit": "Ajouter la dépense",
         "loading": "Ajout de la dépense...",
@@ -97,55 +89,48 @@
           "DEFAULT": "Désolé, une erreur s'est produite lors de l'ajout de la dépense"
         }
       },
-      "modal": {
-        "close": "Fermer",
-        "cancel": "Annuler",
-        "delete": {
-          "title": "Suppression d'une dépense",
-          "warning": "Êtes-vous certain de vouloir supprimer définitivement la dépense",
-          "warning_1": "Êtes-vous certain de vouloir",
-          "warning_2": "supprimer définitivement",
-          "warning_3": "la dépense",
-          "question_mark": " ?",
-          "confirm": "Supprimer la dépense"
-        },
-        "add_participant": {
-          "title": "Ajout d'un participant",
-          "name": "Nom",
-          "email": "Email (optionnel)",
-          "share": "Part",
-          "expenses": {
-            "label": "Dépenses",
-            "all": "Toutes",
-            "none": "Aucune",
-            "selected": "sélectionnée(s)",
-            "ph": "Choisir parmi les dépenses...",
-            "help": "Choisir les dépenses dans lesquelles inclure le participant."
-          },
-          "submit": "Ajouter le participant",
-          "loading": "Ajout du participant...",
-          "errors": {
-            "PARTICIPANT_NAME_REQUIRED": "Vous devez spécifier le nom du participant.",
-            "PARTICIPANT_SHARE_REQUIRED": "Vous devez spécifier la part du participant.",
-            "INVALID_SHARE": "La part du participant doit être supérieure à 0.",
-            "DEFAULT": "Désolé, une erreur s'est produite lors de l'ajout du participant"
-          }
-        }
+      "delete": {
+        "label": "Supprimer",
+        "title": "Suppression d'une dépense",
+        "warning": "Êtes-vous certain de vouloir supprimer définitivement la dépense",
+        "warning_1": "Êtes-vous certain de vouloir",
+        "warning_2": "supprimer définitivement",
+        "warning_3": "la dépense",
+        "question_mark": " ?",
+        "confirm": "Supprimer la dépense"
       }
     },
     "participants": {
       "share": "part",
       "missing_email": "Aucune adresse email",
-      "edit": "Modifier",
-      "edit_form": {
+      "add": {
+        "title": "Ajout d'un participant",
+        "name": "Nom",
+        "email": "Email (optionnel)",
+        "share": "Part",
+        "expenses": "Dépenses",
+        "all": "Toutes",
+        "none": "Aucune",
+        "selected": "sélectionnée(s)",
+        "expenses_ph": "Choisir parmi les dépenses...",
+        "help": "Choisir les dépenses dans lesquelles inclure le participant.",
+        "submit": "Ajouter le participant",
+        "loading": "Ajout du participant...",
+        "errors": {
+          "PARTICIPANT_NAME_REQUIRED": "Vous devez spécifier le nom du participant.",
+          "PARTICIPANT_SHARE_REQUIRED": "Vous devez spécifier la part du participant.",
+          "INVALID_SHARE": "La part du participant doit être supérieure à 0.",
+          "DEFAULT": "Désolé, une erreur s'est produite lors de l'ajout du participant"
+        }
+      },
+      "edit": {
+        "label": "Modifier",
         "title": "Modification d'un participant",
         "name": "Nom",
         "email": "Email (optionnel)",
         "share": "Part",
         "submit": "Modifier le participant",
         "loading": "Modification...",
-        "close": "Fermer",
-        "cancel": "Annuler",
         "errors": {
           "INVALID_EMAIL": "L'email doit être valide",
           "DEFAULT": "Désolé, une erreur s'est produite lors de la mise à jour du participant"
@@ -153,6 +138,12 @@
       }
     },
     "results": {
+      "filter": "Filtrer par nom :",
+      "share": "part",
+      "spent": "Somme totale dépensée :",
+      "creditor": "Créancier",
+      "debt": "Dette",
+      "total": "Total",
       "reminder": {
         "title": "Nouveau rappel",
         "recipients": {
@@ -163,24 +154,16 @@
           "ph": "Aucun sélectionné"
         },
         "submit": "Envoyer le rappel",
-        "loading": "Envoi des rappels...",
-        "status": {
-          "title": "Statut",
-          "failure": "Un problème est survenu lors de l'envoi des rappels",
-          "success": {
-            "true": "ok",
-            "false": "erreur"
-          }
+        "loading": "Envoi des rappels..."
+      },
+      "status": {
+        "title": "Statut",
+        "failure": "Un problème est survenu lors de l'envoi des rappels",
+        "success": {
+          "true": "ok",
+          "false": "erreur"
         }
-      },
-      "filters": {
-        "name": "Filtrer par nom :"
-      },
-      "share": "part",
-      "total_spent": "Somme totale dépensée :",
-      "creditor": "Créancier",
-      "debt": "Dette",
-      "total": "Total"
+      }
     },
     "errors": {
       "default": {
@@ -193,6 +176,10 @@
         "message": "La ressource demandée est introuvable",
         "action": "Retour à l'accueil"
       }
+    },
+    "modal": {
+      "close": "Fermer",
+      "cancel": "Annuler"
     }
   }
 }
