--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -62,6 +62,7 @@
     },
     "history": {
       "title": "Historique",
+      "refresh": "Actualiser",
       "expenses": "Dépenses",
       "participants": "Participants",
       "reminders": "Rappels",
