Change action buttons style

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -58,7 +58,7 @@
         "results": "Results",
         "activity": "Activity"
       },
-      "add_p": "Add a participant"
+      "add_p": "Add Participant"
     },
     "history": {
       "title": "History",
