Display advance towards participants in results

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -165,8 +165,9 @@
       "filter": "Filter by name:",
       "share": "share",
       "spent": "Total amount spent:",
-      "creditor": "Creditor",
+      "participant": "Participant",
       "debt": "Debt",
+      "advance": "Advance",
       "total": "Total",
       "reminder": {
         "title": "New reminder",
