--- a/server/locales/fr/translation.json
+++ b/server/locales/fr/translation.json
@@ -120,12 +120,12 @@
       "delete": {
         "label": "Supprimer",
         "title": "Suppression d'une dépense",
-        "warning": "Êtes-vous certain de vouloir supprimer définitivement la dépense",
-        "warning_1": "Êtes-vous certain de vouloir",
-        "warning_2": "supprimer définitivement",
-        "warning_3": "la dépense",
+        "warning": "Êtes-vous certain de vouloir supprimer la dépense",
         "question_mark": " ?",
         "confirm": "Supprimer la dépense"
+      },
+      "restore": {
+        "label": "Restaurer"
       }
     },
     "participants": {
